Send synthesize mouse move event if mouse is locked

crrev.com/c/612720 disabled send SynthesizeMouseEvent
when cursor is invisible.
However when pointer lock, we use MoveCursorTo() to move
cursor. Need a synthesize mouse move event to reset
positions.

Bug: 781182
Change-Id: I6dabfff7472bd4454b1cb37dd805ea0368bae27f
Reviewed-on: https://chromium-review.googlesource.com/769931
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516927}
Former-commit-id: cbdf0d7f47fd42b199941383c45b7e09d374bc0c